--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi"/>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet"> 
-		<link rel="stylesheet" href="../style/style.css" />
+		<link rel="stylesheet" href="./style/sass/style.css" />
         <title>Ohmyfood</title>
     </head>
 
